syntax = "proto3";

message Empty {}

message NetworkInfo {
    string coordinator_address = 1;
    repeated string node_addresses = 2;
    repeated int32 val_indices = 3;
}

message DataSet {
    message DataPoint {
        map<int32, float> datapoint = 1;
        int32 target = 2;
    }
    repeated DataPoint datapoints = 1;
}

message StartMessage {}

message WeightUpdate {
    map<int32, float> delta_w = 1;
//    map<int32, float> train_loss = 2;
}

message ReadyToGo {}

message EpochsDone {}

message StopMessage {}

service Hogwild {
    rpc GetNodeInfo (NetworkInfo) returns (Empty) {}
    rpc StartSGD (StartMessage) returns (Empty) {}
    rpc GetWeightUpdate (WeightUpdate) returns (Empty) {}
    rpc GetReadyToGo (ReadyToGo) returns (Empty) {}
    rpc GetEpochsDone (EpochsDone) returns (Empty) {}
    rpc GetStopMessage (StopMessage) returns (Empty) {}
}
